DuPont DevSB/src/objects/sma__MAScheduledJob__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sma__ApexClassName__c</fullName>
        <label>Apex Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__BaseObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Object</label>
        <referenceTo>sma__MABaseObject__c</referenceTo>
        <relationshipLabel>MapAnything Scheduled Jobs</relationshipLabel>
        <relationshipName>ScheduledJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__JobId__c</fullName>
        <label>JobId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MapAnything Scheduled Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Scheduled Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>